# graviton

./: CMakeLists.txt  COPYING.examples  GravitonConfig.cmake.in  circle.yml  graviton.service  graviton.spec  uncrustify.cfg
bindings/python/: graviton-browse  graviton-call  graviton.py  setup.py
cmake/: GravitonInternal.cmake
docs/: CMakeLists.txt  Graviton-docs.xml.cmake  Graviton.types  bower.json  intro.xml  package.json
docs/book/: concepts.md  intro.md
docs/docbook/: phrobo.xsl
docs/img/: logo-shape.dxf
docs/scss/: _settings.scss  docs.scss
src/: CMakeLists.txt  config.h.cmake
src/examples/: CMakeLists.txt
src/examples/clock/: CMakeLists.txt  client.c  graviton-clock-server.service  server.c
src/examples/mpd-control/: CMakeLists.txt  client.c  mpd-service.c  mpd-service.h  server.c
src/examples/ping/: CMakeLists.txt  client.c  server.c
src/examples/ping-client/: CMakeLists.txt
src/examples/ping-server/: CMakeLists.txt
src/examples/stream/: CMakeLists.txt  client.c  server.c
src/examples/stream-client/: CMakeLists.txt
src/examples/stream-server/: CMakeLists.txt
src/graviton/: CMakeLists.txt  client.c  client.h  cloud.c  cloud.h  control.c  control.h  discovery-method.c  discovery-method.h  file-stream.c  graviton.pc.cmake  internal-plugin.c  internal-plugin.h  introspection-control.c  introspection-control.h  introspection-interface.c  introspection-interface.h  introspection-service.c  introspection-service.h  node-control.c  node-control.h  node-input-stream.c  node-io-stream.c  node-io-stream.h  node-stream.c  node-stream.h  node.c  node.h  plugin-manager.c  plugin-manager.h  plugin.c  plugin.h  root-control.c  root-control.h  root-service.c  root-service.h  server.c  server.h  service-interface.c  service-interface.h  (+3 more)
src/graviton-cli/: CMakeLists.txt  main.c
src/graviton-echo-server/: CMakeLists.txt  main.c
src/graviton-ping-client/: CMakeLists.txt  main.c
src/graviton-ping-server/: CMakeLists.txt  main.c
src/graviton-plugin/: CMakeLists.txt  control.c  control.h  graviton-plugin.pc.cmake  plugin-manager.c  plugin-manager.h  plugin.c  plugin.h
src/graviton-server/: CMakeLists.txt  internal-plugin.c  internal-plugin.h  server.c  server.h
src/graviton/client/: CMakeLists.txt  cloud.c  cloud.h  discovery-method.c  discovery-method.h  graviton-client.pc.cmake  introspection-interface.c  introspection-interface.h  jsonrpc-input-stream.c  jsonrpc-input-stream.h  jsonrpc-io-stream.c  jsonrpc-io-stream.h  jsonrpc-node-transport.c  jsonrpc-node-transport.h  jsonrpc-node.c  jsonrpc-node.h  node-browser.c  node-browser.h  node-input-stream.c  node-input-stream.h  node-io-stream.c  node-io-stream.h  node-stream.c  node-stream.h  node-transport.c  node-transport.h  node.c  node.h  service-interface.c  service-interface.h
src/graviton/common/: CMakeLists.txt  configuration.c  configuration.h
src/graviton/server/: CMakeLists.txt  file-stream.c  file-stream.h  graviton-server.pc.cmake  introspection-service.c  introspection-service.h  org.aether.graviton.Server.xml  quickserver.c  quickserver.h  root-service.c  root-service.h  server-publish-method.c  server-publish-method.h  server.c  server.h  service.c  service.h  static-stream.c  static-stream.h  stream.c  stream.h
src/plugins/: CMakeLists.txt  info-plugin.c  mex.c  mpd-plugin.c  mpd-plugin.h
src/plugins/discovery/: CMakeLists.txt  avahi-discovery.c  avahi-discovery.h  dbus-discovery.c  dbus-discovery.h  neighbor-discovery.c  neighbor-discovery.h  xbee-discovery.c  xbee-discovery.h
src/plugins/publish/: CMakeLists.txt  avahi-publish.c  avahi-publish.h  dbus-publish.c  dbus-publish.h  gdns-publish.c  gdns-publish.h  spitzer-publish.c  spitzer-publish.h
src/plugins/server/: mpd-plugin.c
src/server/: CMakeLists.txt  info-plugin.c  info-plugin.h  main.c  plugin-manager.h  plugin.c  plugin.h
