cmake_minimum_required(VERSION 2.8)
project(graviton)

set(GRAVITON_VERSION_MAJOR 0)
set(GRAVITON_VERSION_MINOR 0)
set(GRAVITON_VERSION_PATCH 1)
set(GRAVITON_VERSION
  "${GRAVITON_VERSION_MAJOR}.${GRAVITON_VERSION_MINOR}.${GRAVITON_VERSION_PATCH}")

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


add_subdirectory(src)
