cmake_minimum_required(VERSION 2.8)
project(graviton)

set(GRAVITON_VERSION_MAJOR 0)
set(GRAVITON_VERSION_MINOR 0)
set(GRAVITON_VERSION_PATCH 1)
set(GRAVITON_VERSION
  "${GRAVITON_VERSION_MAJOR}.${GRAVITON_VERSION_MINOR}.${GRAVITON_VERSION_PATCH}")

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


if (NOT LIB_SUFFIX)
  if (CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(LIB_SUFFIX "")
  else()
    set(LIB_SUFFIX "64")
  endif()
endif()

add_subdirectory(src)
